--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 STORE_NAME=
-COSMOS_CONSTRING=
-COSMOS_DB_NAME=
-COSMOS_CONTAINER=
-COSMOS_PARTITION_KEY=
+DB_HOST=localhost
+DB_USER=root
+DB_PASSWORD=
+DB_NAME=countdownprice
+DB_PORT=3306
 IMAGE_UPLOAD_FUNC_URL=
